--- a/src/styles.scss
+++ b/src/styles.scss
@@ -24,4 +24,28 @@ body {
   font-family: monospace;
   margin: 0px;
   padding: 0px;
+
+  ::-webkit-scrollbar {
+    width: 7px;
+  }
+
+  ::-webkit-scrollbar-track {
+    background: transparent; 
+  }
+  
+  ::-webkit-scrollbar-thumb {
+    background: rgb(122, 89, 89);
+    border: 2px solid transparent;
+    background-clip: padding-box;
+    border-radius: 7px;
+  
+    &:hover {
+      background: rgb(92, 70, 70);
+      border: none;
+    }
+  
+    &:active {
+      background: rgb(70, 53, 53);
+    }
+  }
 }
