--- a/src/styles.scss
+++ b/src/styles.scss
@@ -23,6 +23,8 @@ body {
   color: var(--text-color);
   font-family: monospace;
   margin: 0px;
+  max-width: 100%;
+  overflow-x: hidden;
   padding: 0px;
 
   ::-webkit-scrollbar {
