--- a/src/styles.scss
+++ b/src/styles.scss
@@ -24,7 +24,7 @@ body {
   font-family: monospace;
   margin: 0px;
   max-width: 100%;
-  overflow-x: hidden;
+  overflow: hidden;
   padding: 0px;
 
   ::-webkit-scrollbar {
