--- a/src/styles.scss
+++ b/src/styles.scss
@@ -28,8 +28,11 @@ body {
   padding: 0px;
 
   #page-component {
+    max-width: 100vw;
+    min-width: 100vw;
     overflow: hidden;
     position: fixed;
+    width: 100vw;
   }
 
   ::-webkit-scrollbar {
